[project]
name = "raman-spectroscopy-concentration-prediction"
version = "0.1.0"
description = "Raman spectroscopy-based concentration prediction"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.0.2",
    "pandas>=2.2.3",
    "rich>=13.9.4",
    "scikit-learn>=1.6.0",
    "tensorflow>=2.14.0",
]
